# events-aggregator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  database.py  dependencies.py  enums.py  main.py  models.py  paginator.py  provider_client.py  repositories.py  schemas.py  services.py  usecases.py
tests/: test_paginator.py  test_provider_client.py
